--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node server.ts"
+    "start": "ts-node -r tsconfig-paths/register server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -32,5 +32,8 @@
     "@config": "./config",
     "@routes": "./routes",
     "@services": "./services"
+  },
+  "devDependencies": {
+    "tsconfig-paths": "^4.2.0"
   }
 }
