--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "target": "es6",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "module": "commonjs",
     "esModuleInterop": true,
     "baseUrl": ".",
