--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "@iconify/react": "^4.1.1",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.2.56",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
@@ -29,6 +29,6 @@
     "postcss": "^8",
     "sass": "^1.70.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.3.3"
   }
 }
