--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
@@ -26,14 +27,16 @@
     "@models": "./models",
     "@config": "./config",
     "@routes": "./routes",
-    "@services": "./services"
+    "@services": "./services",
+    "@middleware": "./middleware"
   },
   "imports": {
     "@controllers": "./controllers",
     "@models": "./models",
     "@config": "./config",
     "@routes": "./routes",
-    "@services": "./services"
+    "@services": "./services",
+    "@middleware": "./middleware"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
