--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "redux": "^5.0.1",
     "sequelize": "^6.36.0",
     "sequelize-typescript": "^2.1.6",
     "ts-node": "^10.9.2"
