--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -30,6 +30,10 @@ ARG PORT
 # Leverage a cache mount to /root/.npm to speed up subsequent builds.
 # Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
 # into this layer.
+
+RUN npm install\
+    && npm install typescript tsconfig/register -g 
+
 RUN --mount=type=bind,source=package.json,target=package.json \
     --mount=type=bind,source=package-lock.json,target=package-lock.json \
     --mount=type=cache,target=/root/.npm \
