--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -32,7 +32,9 @@ ARG PORT
 # into this layer.
 
 RUN npm install\
-    && npm install typescript tsconfig/register -g 
+    && npm install typescript tsconfig-paths ts-node -g --save-dev 
+
+
 
 RUN --mount=type=bind,source=package.json,target=package.json \
     --mount=type=bind,source=package-lock.json,target=package-lock.json \
@@ -49,4 +51,5 @@ COPY . .
 EXPOSE 4000
 
 # Run the application.
-CMD npm start
+CMD ["npm", "start"]
+
