--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node -r tsconfig-paths/register server.ts",
+    "start": "nodemon --exec  ts-node -r tsconfig-paths/register server.ts",
     "sequelize": "sequelize"
   },
   "author": "",
@@ -20,9 +20,9 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "redux": "^5.0.1",
+    "tsconfig-paths": "^4.2.0",
     "sequelize": "^6.36.0",
-    "sequelize-typescript": "^2.1.6",
-    "ts-node": "^10.9.2"
+    "sequelize-typescript": "^2.1.6"
   },
   "_moduleAliases": {
     "@controllers": "./controllers",
@@ -46,6 +46,7 @@
     "@types/node": "^20.11.17",
     "@types/sequelize": "^4.28.20",
     "sequelize-cli": "^6.6.2",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
