--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -36,10 +36,12 @@ RUN npm install\
 
 
 
-RUN --mount=type=bind,source=package.json,target=package.json \
-    --mount=type=bind,source=package-lock.json,target=package-lock.json \
-    --mount=type=cache,target=/root/.npm \
-    npm ci --omit=dev
+# RUN --mount=type=bind,source=package.json,target=package.json \
+#     --mount=type=bind,source=package-lock.json,target=package-lock.json \
+#     --mount=type=cache,target=/root/.npm \
+#     npm ci --omit=dev
+
+RUN --mount=type=cache,id=node_modules,target=/app/node_modules npm install
 
 # Run the application as a non-root user.
 USER node
