--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -41,9 +41,10 @@ RUN npm install\
 #     --mount=type=cache,target=/root/.npm \
 #     npm ci --omit=dev
 
-RUN --mount=type=cache,id=npm_cache,target=/root/.npm \
+RUN --mount=type=cache,id=<spark-admin>-node-modules,target=/app/node_modules \
     npm install
-    
+
+
 # Run the application as a non-root user.
 USER node
 
