--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -14,6 +14,6 @@
       "@services/*": ["./services/*"]
     },
     "outDir": "../server"
-  },
-  "include": ["../server/**/*"]
+  }
+  // "include": ["../server/**/*"]
 }
