--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "gsap": "^3.12.5",
     "next": "14.1.0",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18"
   },
