--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "gsap": "^3.12.5",
     "next": "14.1.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18"
   },
