--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
