--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
