--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.8",
+    "breakpoint-slicer": "^3.0.0-beta.1",
     "gsap": "^3.12.5",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "react": "^18",
-    "react-dom": "^18",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
     "react-syntax-highlighter": "^15.5.0"
   },
