--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "sass": "^1.70.0",
     "tailwindcss": "^3.3.0",
     "typescript": "5.3.3"
