--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "breakpoint-slicer": "^3.0.0-beta.1",
     "gsap": "^3.12.5",
+    "link": "^2.1.1",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
@@ -23,6 +24,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
+    "react-scroll": "^1.9.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
