--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "breakpoint-slicer": "^3.0.0-beta.1",
     "gsap": "^3.12.5",
+    "html-react-parser": "^5.1.10",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
