--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
