--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "html-react-parser": "^5.1.10",
     "link": "^2.1.1",
     "next": "14.1.0",
+    "next-i18next": "^15.3.0",
+    "next-intl": "^3.14.1",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "react": "^18",
