--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
-    "puppeteer": "^22.7.1"
+    "@react-three/a11y": "^3.0.0",
+    "puppeteer": "^22.7.1",
+    "three": "^0.165.0"
   }
 }
