--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -35,6 +35,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "**/*.obj",
     ".next/types/**/*.ts",
     "app/registration/page.tsx"
   ],
