--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-quill": "^2.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-type-animation": "^3.2.0",
+    "swiper": "^11.1.4",
     "three": "^0.165.0"
   },
   "devDependencies": {
