--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "devDependencies": {
     "breakpoint-slicer": "^3.0.0-beta.1",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
     "@react-three/a11y": "^3.0.0",
