--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,5 +1,10 @@
 {
-  "extends": ["next", "next/core-web-vitals"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "next/core-web-vitals"
+  ],
   "parserOptions": {
     "babelOptions": {
       "presets": ["next/babel"]
