--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -48,9 +49,11 @@
     "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
     "babel": "^6.23.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.3",
+    "cypress": "^13.12.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "^14.2.4",
     "file-loader": "^6.2.0",
     "next": "^14.2.4",
     "postcss": "^8",
