--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "breakpoint-slicer": "^3.0.0-beta.1",
     "gsap": "^3.12.5",
     "html-react-parser": "^5.1.10",
+    "jwt-decode": "^4.0.0",
     "link": "^2.1.1",
     "next-i18next": "^15.3.0",
     "next-intl": "^3.14.1",
