--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "breakpoint-slicer": "^3.0.0-beta.1",
     "gsap": "^3.12.5",
@@ -29,9 +30,12 @@
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-loading-skeleton": "^3.4.0",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tooltip": "^5.27.1",
     "react-type-animation": "^3.2.0",
     "swiper": "^11.1.4",
     "three": "^0.165.0"
