--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
