--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-spinners": "^0.14.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.27.1",
     "react-type-animation": "^3.2.0",
