--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.27.1",
     "react-type-animation": "^3.2.0",
+    "socket.io-client": "^4.7.5",
     "swiper": "^11.1.4",
     "three": "^0.165.0"
   },
